main.css
html,body{
	margin:0;
}
main{
	width: 650px;
	height: 509px;
	background-color: #bbada0;
	position: relative;
	left: 25em;
	top: 8em;
	border-radius: 5px;
}
.tile{
	background-color:rgba(238, 228, 218, 0.35);
	display:inline-block;
	width: 139px;
	height: 105px;
	margin: 1em 0 0 1em;
	border-radius: 3px;
	position: relative;
	text-align: center;
}
.tile a{
	font-weight: bold;
	font-size: 65px;
	font-family: 'Source Sans Pro', sans-serif;
	user-select: none;
	position: absolute;
}

